# jarvis-dashboard

./: .gitignore  Jarvis Dashboard Mobile.md  Jarvis Dashboard.md  LICENSE  README.md
companion/: README.md  com.jarvis.companion.plist  com.jarvis.companion.plist.example  package-lock.json  package.json  server.js  setup.sh
companion/modules/: audio.js  auth.js  claude-runner.js  config.js  connection-handler.js  handlers.js  message-router.js  protocol.js  server-factory.js  text-processing.js  transcriber.js  tts.js  utils.js  voice-pipeline.js
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md  project-structure.md
docs/certificates/: README.md
docs/common/: README.md
docs/customizations/: README.md
docs/demo/: README.md
docs/ios/: README.md
docs/macos/: README.md
docs/obsidian/: README.md
docs/releases/: README.md  v1.0.0.md
docs/security/: README.md
docs/server/: README.md
docs/setup/: README.md
docs/speech-to-text/: README.md
docs/text-to-speech/: README.md
docs/troubleshooting/: README.md
docs/voice-models/: README.md
docs/widgets/: README.md  activity-analytics.md  agent-cards.md  communication-link.md  focus-timer.md  footer.md  header.md  (+7 more)
macos/: package-lock.json  package.json
macos/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
macos/src-tauri/capabilities/: default.json
macos/src-tauri/icons/: icon.icns
macos/src-tauri/src/: lib.rs  main.rs  menu.rs
macos/src-tauri/src/commands/: fs_commands.rs  mod.rs  os_commands.rs  process_commands.rs  vault_commands.rs
shared/: loader.js
(+108 files in other folders)
