[package]
name = "macos"
version = "1.0.0"
description = "Jarvis — AI Dashboard for macOS"
authors = ["Andrew Kochulab"]
edition = "2021"

[lib]
name = "jarvis_macos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
